# api-rs

./: .env  .gitignore  Cargo.toml  flake.nix
.github/workflows/: build.yml  clippy.yml  docker.yml
nix/: module.nix  package.nix
parts/: derivation.nix  dev.nix  module.nix
src/: cache.rs  config.rs  discord.rs  downloads.rs  lastfm.rs  main.rs  metrics.rs  migrate.rs  model.rs  tiers.rs  twitter.rs  util.rs
