[package]
name = "api-rs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = "0.8.7"
bb8 = "0.9.0"
bb8-redis = "0.24.0"
dotenvy = "0.15.7"
envy = "0.4.2"
metrics = "0.24.2"
metrics-exporter-prometheus = { version = "0.17.2", default-features = false }
redis-macros = { version = "0.5.6", default-features = false, features = [
    "macros",
] }
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = [
    "http2",
    "charset",
    "json",
    "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = { version = "0.12.4", default-features = false, features = [
    "builder",
    "model",
    "rustls_backend",
] }
tokio = { version = "1.48.0", features = [
    "rt-multi-thread",
    "macros",
    "signal",
] }
tower-http = { version = "0.6.7", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["serde"] }

[profile.release]
strip = true
lto = "thin"
