[package]
name = "api-rs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = "0.8.8"
dotenvy = "0.15.7"
envy = "0.4.2"
metrics = "0.24.3"
metrics-exporter-prometheus = { version = "0.18.1", default-features = false }
redis = { version = "1.0.3", features = ["tokio-comp"] }
redis-macros = "1.0.1"
regex = "1.12.2"
reqwest = { version = "0.12.28", default-features = false, features = [
    "http2",
    "charset",
    "json",
    "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = { version = "0.12.5", default-features = false, features = [
    "builder",
    "model",
    "rustls_backend",
] }
tokio = { version = "1.49.0", features = [
    "rt-multi-thread",
    "macros",
    "signal",
] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.20.0", features = ["serde"] }

[profile.release]
strip = true
lto = "thin"
